@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2021, 2022 Obeo.
+ * Copyright (c) 2021, 2023 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -14,6 +14,7 @@ import { Selection } from '@eclipse-sirius/sirius-components-core';
 import { SModelElement } from 'sprotty';
 import { Action, Point } from 'sprotty-protocol';
 import {
+  DiagramDescription,
   GQLDiagram,
   Position,
   SingleClickOnTwoDiagramElementsTool,
@@ -23,6 +24,7 @@ import {
 export interface SiriusUpdateModelAction extends Action {
   kind: 'siriusUpdateModel';
   diagram: GQLDiagram;
+  diagramDescription: DiagramDescription;
   readOnly: boolean;
 }
 
