@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2019, 2022 Obeo.
+ * Copyright (c) 2019, 2023 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -45,7 +45,7 @@ const isRectangleNodeStyle = (nodeStyle: GQLINodeStyle): nodeStyle is GQLRectang
 const httpOrigin = 'http://localhost';
 
 test('converts a diagram', () => {
-  const sprottyDiagram = convertDiagram(siriusWebDiagram, httpOrigin, false);
+  const sprottyDiagram = convertDiagram(siriusWebDiagram, { autoLayout: false }, httpOrigin, false);
 
   expect(sprottyDiagram).not.toBeNull();
   expect(sprottyDiagram).not.toBeUndefined();
