@@ -14,6 +14,8 @@
 - https://github.com/eclipse-sirius/sirius-components/issues/1592[#1592] [view] In View-based diagram definition, all tools applicable on a given element are now configured inside the new _Palette_ element directly inside the element (diagram, node or edge) description.
 - https://github.com/eclipse-sirius/sirius-components/issues/1761[#1761] [core] Remove `sirius-web-graphql-schema` since it was not really used anymore
 - https://github.com/eclipse-sirius/sirius-components/issues/1825[#1825] [diagram] Distinguish the containment kind of view creation requests
+- https://github.com/eclipse-sirius/sirius-components/issues/1840[#1840] [diagram] The GraphQL field Diagram#autoLayout has been removed.
+We only use DiagramDescription#autoLayout to retrieve the autolayout state of a diagram.
 
 === Dependency update
 
